@@ -29,7 +29,7 @@ conforms_to_protocol(Category, Protocol)
 conforms_to_protocol(Object, Protocol, Scope)
 conforms_to_protocol(Category, Protocol, Scope)</pre>
 <p>
-Enumerates, by backtracking, all pairs of entities such that an object or a category conforms to a protocol. The relation scope is represented by the atoms <code>public</code>, <code>protected</code>, and <code>private</code>. This predicate implements a transitive closure for the protcol implementation relation.
+Enumerates, by backtracking, all pairs of entities such that an object or a category conforms to a protocol. The relation scope is represented by the atoms <code>public</code>, <code>protected</code>, and <code>private</code>. This predicate implements a transitive closure for the protocol implementation relation.
 </p>
 
 <h4>Template and modes</h4>
