@@ -997,6 +997,7 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>built_in</code>" |</dd>
 			<dd>"<code>declared_in(</code>" entity_identifier "<code>)</code>" |</dd>
 			<dd>"<code>defined_in(</code>" object_identifier | category_identifier "<code>)</code>" |</dd>
+			<dd>"<code>redefined_from(</code>" object_identifier | category_identifier "<code>)</code>" |</dd>
 			<dd>"<code>meta_predicate(</code>" meta_predicate_template "<code>)</code>" |</dd>
 			<dd>"<code>alias_of(</code>" callable "<code>)</code>" |</dd>
 			<dd>"<code>non_terminal(</code>" non_terminal_indicator "<code>)</code>" |</dd>
